--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
 
       <div class="text-center text-md-center">
         
-		  <p style="padding-top: 5px; font-weight: 600;"><a style="text-decorations:none; color:inherit;" href="https://github.com/asrith-reddy" ></a></p><a href="https://github.com/bikilas/Phishing-Website-Detection/branches" ><button style="font-size:15px" class="button3">Source Code <i class="fa fa-github"></i></button></a>
+		  <p style="padding-top: 5px; font-weight: 600;"><a style="text-decorations:none; color:inherit;" href="https://github.com/kerthik/Url-Detection.git" ></a></p><a href="https://github.com/bikilas/Phishing-Website-Detection/branches" ><button style="font-size:15px" class="button3">Source Code <i class="fa fa-github"></i></button></a>
         </div>
       </div>
     </div>
